# nonebot-plugin-servicestate

./: .gitignore  LICENSE  README.md  __init__.py  config.txt  exception.py  network.py  nonebot_command.py  protocol.py  pyproject.toml  service.py  unit_test.py
.github/workflows/: python-publish.yml
nonebot_plugin_servicestate/: __init__.py  adapter_nonebot.py  compatible.py  config.txt  exception.py  logger.py  manager.py  nonebot_command.py  service.py  utils.py
nonebot_plugin_servicestate/protocol/: __init__.py  demo.py  example.py  http.py  protocol.py  tcp.py
protocol/: __init__.py  http.py  protocol.py  tcp.py
