[tool.poetry]
name = "nonebot-plugin-servicestate"
version = "0.0.1"
description = "基于NoneBot2的状态监测插件"
authors = ["OREOCODEDEV <17620745509@126.COM>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/OREOCODEDEV/nonebot-plugin-servicestate"
repository = "https://github.com/OREOCODEDEV/nonebot-plugin-servicestate"
packages = [{include = "nonebot_plugin_servicestate"}]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.20.0"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
